version 2.3 (2012-xx-xx)

version 2.2 "March" (2012-03-19)
	* Enhance scene description language:
	  * Support declaring variables hold scalar values, vectors, colors,
	    pigments, finishes, cameras, light sources, and objects.
	  * Support modifying the pigment and finish of an object
	    (for intantiating an object from a declared variable).
	  * Support arithmetic and logical operators on vector expressions.

version 2.1 "Two Candles" (2011-12-04)
	* Enhance scene description language:
	  * Support specifying floating point literal values in scientific
	    notation.
	  * Support basic arithmetic operators (+-*/) for floating point
	    expressions.
	  * Support the following built-in functions for floating point values:
	    abs, acos, asin, asinh, atan, atanh, ceil, cos, cosh, degrees, div,
	    exp, floor, int, ln, log, max, min, mod, pow, radians, select, sin,
	    sinh, tan, tanh.
	  * Support floating point constants: false, no, off (=0),
	    on, true, yes (=1) and pi.
	  * Support logical operators =,!=,<,<=,>,>=,& (and) ,| (or),! (not).
	  * Support the conditional ternary operator (expr ? val1 : val2)
	    for floating point and vector values.
	  * Support the basic arithmetic operators +,- for vector expressions.
	  * Support the following built-in functions for vector values:
	    vcross, vdot, vlength, vnormalize.
	  * Support built-in vector constants x,y, and z for unit vectors in the
	    respective dimensions.
	  * Support casting a floating point value to a vector
	    (with all elements set to that value, for example 0 to specify
	    origo).
	* Support the new geometric object "disc" (only using single-color
	  pigment for now).

version 2.0 (2011-10-26)
	* Re-written in C++.

version 1.0 (2011-07-01)
	* Switch to using automake for building.
	* Fix building on Windows.
	* Changed command line syntax to be consistent with other Unix-like tools.
	* Allow piping both input and output files.
	* Added example files.

version 0.9 (2011-05-29)